--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -17,5 +17,4 @@ jobs:
         pip install -r requirements.txt
     - name: Run tests
       run: |
-        nose2 src/sirn_tests
-        nose2 src/analysis_tests
+        nose2 src
