Testing api_basics.ipynb: conversion script, update workflow

--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -18,3 +18,5 @@ jobs:
     - name: Run tests
       run: |
         cd src; nose2 pySubnetSB_tests
+        python scripts/make_example_script.py
+        cd examples; ipython api_basics.py
