--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -18,7 +18,7 @@ jobs:
         pip install -r requirements.txt
     - name: Run tests
       run: |
-        cd src; nose2 --with-coverage pySubnetSB_tests
-        coverage-badge -o coverage.svg
+        #cd src; nose2 --with-coverage pySubnetSB_tests
+        #coverage-badge -o coverage.svg
         cd ..; ls; python scripts/make_example_script.py
         cd examples; ipython api_basics.py
