--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -20,5 +20,6 @@ jobs:
       run: |
         #cd src; nose2 --with-coverage pySubnetSB_tests
         #coverage-badge -o coverage.svg
-        cd ..; ls; python scripts/make_example_script.py
+        #cd ..
+        ls; python scripts/make_example_script.py
         cd examples; ipython api_basics.py
