--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -21,5 +21,7 @@ jobs:
         #cd src; nose2 --with-coverage pySubnetSB_tests
         #coverage-badge -o coverage.svg
         #cd ..
-        ls; python scripts/make_example_script.py
+        ls
+        echo ${{ PYTHONPATH }}
+        python scripts/make_example_script.py
         cd examples; ipython api_basics.py
