--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -18,9 +18,9 @@ jobs:
         pip install -r requirements.txt
     - name: Run tests
       run: |
-        #cd src; nose2 --with-coverage pySubnetSB_tests
-        #coverage-badge -o coverage.svg
-        #cd ..
+        cd src; nose2 --with-coverage pySubnetSB_tests
+        coverage-badge -o coverage.svg
+        cd ..
     - name: Install package
       run: |
         pip install pySubnetSB
