--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -26,8 +26,4 @@ jobs:
     - name: Run notebook
       run: |
         python scripts/make_example_script.py
-    - name: Update Coverage Badge
-        # GitHub actions: default branch variable
-        # https://stackoverflow.com/questions/64781462/github-actions-default-branch-variable
-       if: github.ref == format('refs/heads/{0}', github.event.repository.default_branch)
-       uses: we-cli/coverage-badge-action@main
+        ipython examples/api_basics.py
