--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -17,7 +17,7 @@ jobs:
         pip install -r requirements.txt
     - name: Run tests
       run: |
-        cd src; nose2 --with-coverage --reporter=json-summary pySubnetSB_tests
+        cd src; nose2 --with-coverage pySubnetSB_tests
         coverage-badge -o coverage.svg
         cd ..
     - name: Install package
