--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -2,7 +2,7 @@ name: Continous integration
 on: [push]
 jobs:
   Run-tests:
-    runs-on: ubuntu-20.04
+    runs-on: linux
     steps:
     - uses: actions/checkout@v3
     - name: Set up Python 3.9
