--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -4,7 +4,7 @@ jobs:
   Run-tests:
     #runs-on: ubuntu-latest
     #runs-on: Ubuntu 20.04
-    runs-on: Ubuntu 22.04
+    runs-on: ubuntu-22.04
     steps:
     - uses: actions/checkout@v3
     - name: Set up Python
