--- a/.github/workflows/linux-github-actions.yml
+++ b/.github/workflows/linux-github-actions.yml
@@ -11,6 +11,10 @@ jobs:
           python-version: '3.8'
       env:
           AGENT_TOOLSDIRECTORY: /opt/hostedtoolcache
+    - name: Install
+      run: |
+        pip install --upgrade pip
+        pip install -r requirements.txt
     - name: Run notebook
       run: |
         python scripts/make_example_script.py
@@ -25,6 +29,10 @@ jobs:
           python-version: '3.10'
       env:
           AGENT_TOOLSDIRECTORY: /opt/hostedtoolcache
+    - name: Install
+      run: |
+        pip install --upgrade pip
+        pip install -r requirements.txt
     - name: Run notebook
       run: |
         python scripts/make_example_script.py
@@ -39,6 +47,10 @@ jobs:
           python-version: '3.12'
       env:
           AGENT_TOOLSDIRECTORY: /opt/hostedtoolcache
+    - name: Install
+      run: |
+        pip install --upgrade pip
+        pip install -r requirements.txt
     - name: Run notebook
       run: |
         python scripts/make_example_script.py
