--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -11,9 +11,13 @@ jobs:
           python-version: '3.8'
       env:
           AGENT_TOOLSDIRECTORY: /opt/hostedtoolcache
-    - name: Run notebook
+    - name: Install
       run: |
-        python scripts/make_example_script.py
+        pip install --upgrade pip
+        pip install jupyterlab
+        pip install pySubnetSB
+    - name: Run script
+      run: |
         ipython examples/api_basics.py
   Run-310:
     runs-on: ubuntu-latest
@@ -25,6 +29,10 @@ jobs:
           python-version: '3.10'
       env:
           AGENT_TOOLSDIRECTORY: /opt/hostedtoolcache
+    - name: Install
+      run: |
+        pip install --upgrade pip
+        pip install -r requirements.txt
     - name: Run notebook
       run: |
         python scripts/make_example_script.py
@@ -39,6 +47,10 @@ jobs:
           python-version: '3.12'
       env:
           AGENT_TOOLSDIRECTORY: /opt/hostedtoolcache
+    - name: Install
+      run: |
+        pip install --upgrade pip
+        pip install -r requirements.txt
     - name: Run notebook
       run: |
         python scripts/make_example_script.py
