--- a/.github/workflows/linux-github-actions.yml
+++ b/.github/workflows/linux-github-actions.yml
@@ -14,10 +14,10 @@ jobs:
     - name: Install
       run: |
         pip install --upgrade pip
-        pip install -r requirements.txt
-    - name: Run notebook
+        pip install jupyterlab
+        pip install pySubnetSB
+    - name: Run script
       run: |
-        python scripts/make_example_script.py
         ipython examples/api_basics.py
   Run-310:
     runs-on: ubuntu-latest
