--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -1,97 +1,20 @@
 name: Continous integration
 on: [push]
 jobs:
-  Run-308:
-    runs-on: ubuntu-latest
+  Run-tests:
+    runs-on: windows-latest # Changed from ubuntu-latest to windows-latest
     steps:
     - uses: actions/checkout@v3
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-          python-version: '3.8'
-      env:
-          AGENT_TOOLSDIRECTORY: /opt/hostedtoolcache
-    - name: Install
-      run: |
-        pip install --upgrade pip
-        pip install jupyterlab
-        pip install pySubnetSB
-    - name: Run script
-      run: |
-        ipython examples/api_basics.py
-  #
-  Run-309:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v3
-    - name: Set up Python
+    - name: Set up Python 3.9
       uses: actions/setup-python@v4
       with:
           python-version: '3.9'
       env:
-          AGENT_TOOLSDIRECTORY: /opt/hostedtoolcache
-    - name: Install
+          AGENT_TOOLSDIRECTORY: C:\hostedtoolcache\ # Updated path for Windows
+    - name: Install package
       run: |
-        pip install --upgrade pip
         pip install jupyterlab
         pip install pySubnetSB
-    - name: Run script
-      run: |
-        ipython examples/api_basics.py
-  #
-  Run-310:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v3
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-          python-version: '3.10'
-      env:
-          AGENT_TOOLSDIRECTORY: /opt/hostedtoolcache
-    - name: Install
-      run: |
-        pip install --upgrade pip
-        pip install jupyterlab
-        pip install pySubnetSB
-    - name: Run script
-      run: |
-        ipython examples/api_basics.py
-  #
-  Run-311:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v3
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-          python-version: '3.11'
-      env:
-          AGENT_TOOLSDIRECTORY: /opt/hostedtoolcache
-    - name: Install
-      run: |
-        pip install --upgrade pip
-        pip install jupyterlab
-        pip install pySubnetSB
-    - name: Run script
-      run: |
-        ipython examples/api_basics.py
-  #
-  Run-312:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v3
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-          python-version: '3.12'
-      env:
-          AGENT_TOOLSDIRECTORY: /opt/hostedtoolcache
-    - name: Install
-      run: |
-        pip install --upgrade pip
-        pip install jupyterlab
-        pip install pySubnetSB
-    - name: Run script
+    - name: Run notebook
       run: |
         ipython examples/api_basics.py
