--- a/.github/workflows/linux-github-actions.yml
+++ b/.github/workflows/linux-github-actions.yml
@@ -20,6 +20,25 @@ jobs:
       run: |
         ipython examples/api_basics.py
   #
+  Run-309:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+          python-version: '3.9'
+      env:
+          AGENT_TOOLSDIRECTORY: /opt/hostedtoolcache
+    - name: Install
+      run: |
+        pip install --upgrade pip
+        pip install jupyterlab
+        pip install pySubnetSB
+    - name: Run script
+      run: |
+        ipython examples/api_basics.py
+  #
   Run-310:
     runs-on: ubuntu-latest
     steps:
@@ -28,6 +47,25 @@ jobs:
       uses: actions/setup-python@v4
       with:
           python-version: '3.10'
+      env:
+          AGENT_TOOLSDIRECTORY: /opt/hostedtoolcache
+    - name: Install
+      run: |
+        pip install --upgrade pip
+        pip install jupyterlab
+        pip install pySubnetSB
+    - name: Run script
+      run: |
+        ipython examples/api_basics.py
+  #
+  Run-311:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+          python-version: '3.11'
       env:
           AGENT_TOOLSDIRECTORY: /opt/hostedtoolcache
     - name: Install
