--- a/.github/workflows/windows-github-actions.yml
+++ b/.github/workflows/windows-github-actions.yml
@@ -1,7 +1,8 @@
 name: Continous integration
 on: [push]
 jobs:
-  Run-tests:
+  #
+  Run-309:
     runs-on: windows-latest # Changed from ubuntu-latest to windows-latest
     steps:
     - uses: actions/checkout@v3
@@ -9,6 +10,60 @@ jobs:
       uses: actions/setup-python@v4
       with:
           python-version: '3.9'
+      env:
+          AGENT_TOOLSDIRECTORY: C:\hostedtoolcache\ # Updated path for Windows
+    - name: Install package
+      run: |
+        pip install jupyterlab
+        pip install pySubnetSB
+    - name: Run notebook
+      run: |
+        ipython examples/api_basics.py
+  #
+  Run-310:
+    runs-on: windows-latest # Changed from ubuntu-latest to windows-latest
+    steps:
+    - uses: actions/checkout@v3
+    - name: Set up Python 3.10
+      uses: actions/setup-python@v4
+      with:
+          python-version: '3.10'
+      env:
+          AGENT_TOOLSDIRECTORY: C:\hostedtoolcache\ # Updated path for Windows
+    - name: Install package
+      run: |
+        pip install jupyterlab
+        pip install pySubnetSB
+    - name: Run notebook
+      run: |
+        ipython examples/api_basics.py
+  #
+  Run-311:
+    runs-on: windows-latest # Changed from ubuntu-latest to windows-latest
+    steps:
+    - uses: actions/checkout@v3
+    - name: Set up Python 3.11
+      uses: actions/setup-python@v4
+      with:
+          python-version: '3.11'
+      env:
+          AGENT_TOOLSDIRECTORY: C:\hostedtoolcache\ # Updated path for Windows
+    - name: Install package
+      run: |
+        pip install jupyterlab
+        pip install pySubnetSB
+    - name: Run notebook
+      run: |
+        ipython examples/api_basics.py
+  #
+  Run-312:
+    runs-on: windows-latest # Changed from ubuntu-latest to windows-latest
+    steps:
+    - uses: actions/checkout@v3
+    - name: Set up Python 3.12
+      uses: actions/setup-python@v4
+      with:
+          python-version: '3.12'
       env:
           AGENT_TOOLSDIRECTORY: C:\hostedtoolcache\ # Updated path for Windows
     - name: Install package
