--- a/.github/workflows/windows-github-actions.yml
+++ b/.github/workflows/windows-github-actions.yml
@@ -11,7 +11,7 @@ jobs:
       with:
           python-version: '3.9'
       env:
-          AGENT_TOOLSDIRECTORY: /opt/hostedtoolcache
+          AGENT_TOOLSDIRECTORY: C:\hostedtoolcache\ # Updated path for Windo    ws
     - name: Install
       run: |
         pip install --upgrade pip
