--- a/.github/workflows/windows-github-actions.yml
+++ b/.github/workflows/windows-github-actions.yml
@@ -29,7 +29,7 @@ jobs:
       with:
           python-version: '3.10'
       env:
-          AGENT_TOOLSDIRECTORY: /opt/hostedtoolcache
+          AGENT_TOOLSDIRECTORY: C:\hostedtoolcache\ # Updated path for Windo    ws
     - name: Install
       run: |
         pip install --upgrade pip
@@ -47,7 +47,7 @@ jobs:
       with:
           python-version: '3.11'
       env:
-          AGENT_TOOLSDIRECTORY: /opt/hostedtoolcache
+          AGENT_TOOLSDIRECTORY: C:\hostedtoolcache\ # Updated path for Windo    ws
     - name: Install
       run: |
         pip install --upgrade pip
@@ -65,7 +65,7 @@ jobs:
       with:
           python-version: '3.12'
       env:
-          AGENT_TOOLSDIRECTORY: /opt/hostedtoolcache
+          AGENT_TOOLSDIRECTORY: C:\hostedtoolcache\ # Updated path for Windo    ws
     - name: Install
       run: |
         pip install --upgrade pip
